--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,5 +7,6 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
